fix section 2 overflow

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -110,6 +110,7 @@
 :global {
     #design-section {
         @include flex($direction: column, $align: center);
+        overflow: hidden;
         text-align: center;
     }
 }
